--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "package": "plasmo package"
   },
   "dependencies": {
+    "@clerk/chrome-extension": "^2.2.28",
     "@plasmohq/storage": "^1.15.0",
     "plasmo": "0.90.3",
     "react": "18.2.0",
@@ -27,12 +28,12 @@
     "typescript": "5.3.3"
   },
   "manifest": {
-    "host_permissions": [
-      "https://*/*"
-    ],
     "permissions": [
       "storage",
-      "activeTab"
-    ]
+      "activeTab",
+      "cookies"
+    ],
+    "key": "$CRX_PUBLIC_KEY",
+    "host_permissions": ["http://localhost/*", "$CLERK_FRONTEND_API/*"]
   }
 }
