--- a/express-server/netlify.toml
+++ b/express-server/netlify.toml
@@ -1,4 +1,8 @@
+[functions]
+  external_node_modules = ["express"]
+  node_bundler = "esbuild"
 [[redirects]]
+  force = true
   from = "/*"
-  to = "/index.js"
   status = 200
+  to = "/.netlify/functions/:splat"
