--- a/express-server/package.json
+++ b/express-server/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@netlify/functions": "^3.0.4",
+    "@types/express": "^5.0.1",
     "express": "^5.1.0",
     "serverless-http": "^3.2.0"
   }
