--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "package": "plasmo package"
   },
   "dependencies": {
-    "@clerk/chrome-extension": "^2.2.31",
+    "@clerk/chrome-extension": "^2.3.7",
+    "@plasmohq/messaging": "^0.7.1",
     "@plasmohq/storage": "^1.15.0",
+    "messaging==0.5.0": "link:@plasmohq/messaging==0.5.0",
+    "messaging==0.6.0": "link:@plasmohq/messaging==0.6.0",
+    "messaging==0.7.0": "link:@plasmohq/messaging==0.7.0",
+    "messaging==0.7.1": "link:@plasmohq/messaging==0.7.1",
+    "messaging==0.9.0": "link:@plasmohq/messaging==0.9.0",
     "plasmo": "0.90.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
