--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shortcutthing",
   "displayName": "ShortcutThing",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": " ",
   "author": " ",
   "scripts": {
@@ -10,14 +10,10 @@
     "package": "plasmo package"
   },
   "dependencies": {
-    "@clerk/chrome-extension": "^2.3.7",
+    "@clerk/chrome-extension": "^2.4.0",
     "@plasmohq/messaging": "^0.7.1",
+    "@plasmohq/parcel-config": "^0.42.0",
     "@plasmohq/storage": "^1.15.0",
-    "messaging==0.5.0": "link:@plasmohq/messaging==0.5.0",
-    "messaging==0.6.0": "link:@plasmohq/messaging==0.6.0",
-    "messaging==0.7.0": "link:@plasmohq/messaging==0.7.0",
-    "messaging==0.7.1": "link:@plasmohq/messaging==0.7.1",
-    "messaging==0.9.0": "link:@plasmohq/messaging==0.9.0",
     "plasmo": "0.90.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,11 +28,17 @@
     "cross-env": "^7.0.3",
     "postcss": "8.4.33",
     "prettier": "3.2.4",
+    "svgo": "^3.3.2",
     "typescript": "5.3.3"
   },
   "manifest": {
     "permissions": [
       "storage"
-    ]
+    ],
+    "browser_specific_settings": {
+      "gecko": {
+        "id": "$FIREFOX_EXT_ID"
+      }
+    }
   }
 }
