--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@plasmohq/messaging": "^0.7.1",
     "@plasmohq/parcel-config": "^0.42.0",
     "@plasmohq/storage": "^1.15.0",
+    "@types/json5": "^2.2.0",
+    "json5": "^2.2.3",
     "plasmo": "0.90.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
